# defi-arbitrage-core-public-mvp

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  CREATE_NEW_REPO.sh  Dockerfile  LICENSE  Makefile  QUICK_START.md  README.md  RELEASE.md  REPOSITORY_SETUP_GUIDE.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  release_hardening.md  security_triage.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml
.kilo/plans/: 1780386040371-silent-lagoon.md  1780395380068-misty-pixel.md  1780411078145-shiny-eagle.md  1780452044435-shiny-otter.md
contracts/: README.md  contract-manifest.json
contracts/solidity/: FlashArbExecutor.sol  README.md
contracts/vyper/: FlashArbExecutor.vy  README.md
docs/: TRANSLATION_STATUS.md
docs/en/: ADVANCED_README.md  ARCHITECTURE.md  CONFIGURATION.md  CONTRACTS.md  DEVELOPMENT.md  EXTENSION.md  HISTORY_CLEANUP.md  INDEX.md  (+18 more)
examples/: base_market_snapshot.json  custom_provider.py  market_snapshot.json  no_opportunity_snapshot.json
rust/arbcore-rs/: Cargo.toml  README.md
rust/arbcore-rs/src/: main.rs
schemas/: contract_manifest.schema.json  contract_validation_report.schema.json  diagnostics.schema.json  error.schema.json  market_snapshot.schema.json  opportunity.schema.json  policy.schema.json  release_readiness.schema.json  validation_summary.schema.json
scripts/: create_new_repo.sh  create_public_mvp_repo.sh  demo_workflow.py  release_readiness.py  run_unit_checks.py  secret_scan.sh  validate_all.py  validate_contracts.py  validate_documented_commands.py  validate_examples.py  validate_golden_fixtures.py  validate_negative_cases.py  validate_output_contracts.py  validate_repository.py  validate_rust_service.py  validate_schema_consistency.py
tests/: test_config_reporters.py  test_contracts.py  test_engine.py  test_provider_cli.py  test_rust_service_fallback.py  test_validation_schema.py  test_validation_workflows.py
(+58 files in other folders)
